[gd_scene load_steps=10 format=3 uid="uid://b6mf7ubbwu7be"]

[ext_resource type="Script" uid="uid://dknhqwytd8h5y" path="res://scenes/components/die.gd" id="1_h2dt8"]
[ext_resource type="Texture2D" uid="uid://bxl6jbisuiw7g" path="res://assets/textures/dice-default.png" id="2_gmibq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_o5qli"]
size = Vector3(4, 4, 4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hvcds"]
resource_local_to_scene = true
albedo_texture = ExtResource("2_gmibq")

[sub_resource type="BoxMesh" id="BoxMesh_hvcds"]
lightmap_size_hint = Vector2i(24, 36)
material = SubResource("StandardMaterial3D_hvcds")
size = Vector3(4, 4, 4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kw4wr"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_e5bsa"]
material = SubResource("StandardMaterial3D_kw4wr")
radius = 0.2
height = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e5bsa"]
albedo_color = Color(1, 0.545098, 0.188235, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ya8ws"]
material = SubResource("StandardMaterial3D_e5bsa")
radius = 0.4
height = 0.8

[node name="Die" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0, 0, 0)
mass = 2.0
gravity_scale = 5.0
script = ExtResource("1_h2dt8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_o5qli")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_hvcds")

[node name="Particles" type="CPUParticles3D" parent="."]
cast_shadow = 0
emitting = false
amount = 4
lifetime = 2.5
speed_scale = 1.5
mesh = SubResource("SphereMesh_e5bsa")
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector3(0, 1, -4)

[node name="Particles2" type="CPUParticles3D" parent="."]
cast_shadow = 0
emitting = false
amount = 4
lifetime = 2.0
mesh = SubResource("SphereMesh_ya8ws")
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector3(0, 1, -3)

[node name="ClickTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="timeout" from="ClickTimer" to="." method="_on_click_timer_timeout"]
